# altair

./: .editorconfig  .env.example  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .mcp.json  .pre-commit-config.yaml  .prettierignore  .ripgreprc  .snyk  AGENTS.md  ALTAIR_PYTHON_CONTEXT.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DOCUMENTATION_INDEX.md  Dockerfile  FAQ.md  FEATURES.md  JWT_AUTH_IMPLEMENTATION_PLAN.md  PR_DESCRIPTION.md  QUICK_START.md  README.md  ROADMAP.md  SECURITY.md  UPDATE_SUMMARY.md  altair-ui-ux-guide-adhd-friendly.md  build.gradle.kts  compose.yaml  coordination.md  docker-compose.yml  eslint.config.js  index.html  justfile  kls_database.db  memory-bank.md  (+16 more)
apps/knowledge/src-tauri/: Cargo.toml  tauri.conf.json
apps/knowledge/src-tauri/icons/: icon.icns
apps/knowledge/src-tauri/src/: lib.rs  main.rs  state.rs
apps/mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/mobile/src-tauri/icons/: icon.icns
apps/mobile/src-tauri/src/: lib.rs  state.rs
apps/server/: .env.example  Cargo.toml  DEVELOPMENT.md  Dockerfile
apps/server/migrations/: 0001_users.sql  0002_households.sql  0003_household_memberships.sql  0004_initiatives.sql  0005_guidance_core.sql  0006_knowledge_core.sql  0007_tracking_core.sql  0008_tags.sql  0009_attachments.sql  0010_entity_relations.sql  0011_updated_at_triggers.sql  0012_better_auth_uuid_config.sql  0013_align_relation_enums.sql  0014_sessions.sql  20260326000001_create_users.sql  20260326000002_create_sessions.sql  20260326000003_create_households.sql  20260326000004_create_household_memberships.sql  20260326000005_add_role_check_constraint.sql  20260326100001_create_initiatives.sql  20260326100002_create_tags.sql  20260326100003_create_attachments.sql  20260326100004_create_entity_relations.sql  20260326200001_create_guidance_epics.sql  20260326200001_create_knowledge_notes.sql  20260326200001_create_tracking_locations.sql  20260326200002_create_guidance_quests.sql  20260326200002_create_knowledge_note_snapshots.sql  20260326200002_create_tracking_categories.sql  20260326200003_create_guidance_routines.sql  20260326200003_create_note_tags.sql  20260326200003_create_tracking_items.sql  20260326200004_create_guidance_focus_sessions.sql  20260326200004_create_note_attachments.sql  20260326200004_create_tracking_item_events.sql  20260326200005_create_guidance_daily_checkins.sql  20260326200005_create_tracking_shopping_lists.sql  20260326200006_create_quest_tags.sql  20260326200006_create_tracking_shopping_list_items.sql  20260326200007_create_item_tags.sql  (+6 more)
apps/server/server/: Cargo.toml
apps/server/server/src/: config.rs  contracts.rs  error.rs  lib.rs  main.rs
apps/server/server/tests/: auth_integration.rs  guidance_integration.rs  knowledge_integration.rs  sync_push_integration.rs
apps/server/src/: config.rs  contracts.rs  db.rs  error.rs  lib.rs  main.rs  serde_util.rs  state.rs  telemetry.rs
apps/server/src/api/: health.rs  mod.rs
apps/server/src/attachments/: mod.rs
apps/server/src/auth/: authorization.rs  extractor.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  models.rs  service.rs  session.rs
apps/server/src/core/: mod.rs
apps/server/src/db/: mod.rs
apps/server/src/docs/: mod.rs  ui.rs
apps/server/src/guidance/: mod.rs  today.rs
apps/server/src/handlers/: health.rs  users.rs
apps/server/src/knowledge/: mod.rs
apps/server/src/search/: mod.rs
apps/server/src/sync/: mod.rs
apps/server/src/tracking/: mod.rs
apps/server/tests/: auth_integration.rs  households_integration.rs  initiatives_integration.rs  integration_test.rs  relations_integration.rs  users_integration.rs
apps/server/tests/common/: mod.rs
apps/server/worker/: Cargo.toml
apps/server/worker/src/: main.rs
apps/tracking/src-tauri/: Cargo.toml  tauri.conf.json
apps/tracking/src-tauri/icons/: icon.icns
apps/tracking/src-tauri/src/: lib.rs  main.rs  state.rs
backend/: .coveragerc  .env.example  .gitignore  .snyk  Cargo.toml  build.rs  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 23debc2d9145_add_users_table.py  52835f621260_add_username_and_adhd_profile_to_users.py  a3e22239384c_add_user_id_to_tasks_table.py  b92388e57adf_fix_nullable_constraints_and_add_tasks_.py
backend/altair/: config.py  database.py  dependencies.py  main.py  redis.py
backend/altair/api/: auth.py  tasks.py
backend/altair/models/: __init__.py  base.py  task.py  user.py
backend/altair/schemas/: __init__.py  auth.py  task.py
backend/altair/services/: auth.py
backend/crates/altair-auth/: Cargo.toml
backend/crates/altair-auth/benches/: auth_bench.rs
backend/crates/altair-auth/src/: lib.rs  local.rs  types.rs
backend/crates/altair-auth/tests/: security.rs
backend/crates/altair-commands/: Cargo.toml
backend/crates/altair-commands/src/: auth.rs  lib.rs  storage.rs
backend/crates/altair-core/: Cargo.toml
backend/crates/altair-core/src/: api_error.rs  config.rs  error.rs  lib.rs  logging.rs  traits.rs  types.rs
backend/crates/altair-db/: Cargo.toml
backend/crates/altair-search/: Cargo.toml
backend/crates/altair-storage/: Cargo.toml  README.md
backend/crates/altair-sync/: Cargo.toml
backend/migrations/: 001_initial_schema.surql  002_edge_tables.surql  003_indexes.surql  004_seed_data.surql  005_auth_tables.surql  006_storage_quota.surql  README.md
backend/proto/: quest.proto
backend/src/: main.rs
backend/src/database/: database.rs  mod.rs
backend/src/services/: board_service.rs  mod.rs
backend/tests/: __init__.py  conftest.py  test_auth.py  test_tasks.py
services/ai-service/: .env.example  .gitignore  README.md  pyproject.toml
services/ai-service/app/: __init__.py  main.py
services/ai-service/tests/: conftest.py  test_api.py  test_factory.py  test_health.py  test_models.py
services/auth-service/: .env.example  coverage.xml  pyproject.toml
services/auth-service/app/: __init__.py  main.py
services/auth-service/tests/: conftest.py  test_health.py
(+2128 files in other folders)
