[workspace]
resolver = "2"
members = [
  "backend/crates/altair-core",
  "backend/crates/altair-db",
  "backend/crates/altair-sync",
  "backend/crates/altair-storage",
  "backend/crates/altair-search",
  "backend/crates/altair-auth",
  "backend/crates/altair-commands",
  "apps/guidance/src-tauri",
  "apps/knowledge/src-tauri",
  "apps/tracking/src-tauri",
  "apps/mobile/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Altair Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tauri
tauri = { version = "2.9.3", features = ["unstable"] }
tauri-build = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0.3"

# Altair crates (for workspace members)
altair-core = { path = "backend/crates/altair-core" }
altair-commands = { path = "backend/crates/altair-commands" }
