[package]
name = "altair-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
surrealdb = { version = "2.0", features = ["embedded", "rocksdb"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.12"

