[package]
name = "altair-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-ring-webpki", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.0"
tower-http = { version = "0.6.8", features = ["cors", "trace", "compression-gzip"] }
argon2 = "0.5"
hex = "0.4"
rand = "0.9"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
jsonwebtoken = "9"
validator = { version = "0.20", features = ["derive"] }
