[project]
name = "ai-service"
version = "0.1.0"
description = "AI service for Altair - task breakdown, prioritization, and assistance"
readme = "README.md"
authors = [
    { name = "Robert Hamilton", email = "robert@rghsoftware.com" }
]
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "httpx>=0.26.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.9",
    "mypy>=1.7.1",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
