[project]
name = "auth-service"
version = "0.1.0"
description = "FastAPI authentication service for Altair"
readme = "README.md"
authors = [
    { name = "Robert Hamilton", email = "robert@rghsoftware.com" }
]
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pydantic[email]>=2.5.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "redis>=5.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.9",
    "mypy>=1.7.1",
    "types-python-jose>=3.3.0",
    "types-passlib>=1.7.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
