[package]
name = "knowledge"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
tauri-specta = { workspace = true }
specta-typescript = { workspace = true }

# Altair backend crates
altair-core = { workspace = true }
altair-commands = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true }
tauri-specta = { workspace = true }
specta-typescript = { workspace = true }
