[package]
name = "altair-mobile"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[lib]
name = "altair_mobile_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.9.3", features = [] }
tauri-plugin-shell = "2.0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
