[package]
name = "altair-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "chrono", "runtime-tokio-native-tls"] }
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
serial_test = "3.4.0"
tokio-test = "0.4.5"
