[package]
name = "tracking"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
tauri = { version = "2.9.3", features = ["unstable"] }
tauri-plugin-shell = "2.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Altair backend crates
altair-core = { path = "../../../backend/crates/altair-core" }
altair-commands = { path = "../../../backend/crates/altair-commands" }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
