[package]
name = "altair-auth"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[dependencies]
# Internal dependencies
altair-core = { path = "../altair-core" }

# Async runtime traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Observability
tracing = "0.1"

# Async runtime
tokio = { version = "1.42", features = ["rt", "sync"] }

# Auth-related dependencies
argon2 = { version = "0.5", features = ["std"] }
keyring = "3"
rand_core = { version = "0.6", features = ["getrandom"] }
hex = "0.4"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
