[package]
name = "altair-commands"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[features]
specta = ["dep:specta"]

[dependencies]
# Internal dependencies
altair-core = { path = "../altair-core" }
altair-auth = { path = "../altair-auth" }
altair-db = { path = "../altair-db" }
altair-storage = { path = "../altair-storage" }

# Async runtime
tokio = { version = "1.42", features = ["sync"] }

# Database
surrealdb = "2.2"
chrono = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Type generation (optional)
specta = { version = "2.0.0-rc.20", optional = true, features = ["derive"] }

# Observability
tracing = "0.1"

# Tauri dependencies (placeholders for future use)
# tauri = "2.9"
# tauri-specta = "2.0"

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
