[package]
name = "altair-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.91.1"

[dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime traits
async-trait = "0.1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Observability
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
