[package]
name = "altair-db"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[dependencies]
# Internal dependencies
altair-core = { path = "../altair-core" }

# Database
surrealdb = { version = "2.2", features = ["kv-surrealkv", "kv-mem"] }

# Async runtime
async-trait = "0.1"
tokio = { version = "1.42", features = ["sync", "rt-multi-thread"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
