[package]
name = "altair-db"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[dependencies]
# Internal dependencies
altair-core = { path = "../altair-core" }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Async runtime traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
tracing = "0.1"

# Utilities
shellexpand = "3.1"
chrono = { version = "0.4", features = ["serde"] }
surrealdb = { version = "2.4.0", features = ["kv-mem", "kv-surrealkv"] }

[dev-dependencies]
tempfile = "3.14"
criterion = "0.5"

[[bench]]
name = "migration_bench"
harness = false
