[package]
name = "altair-db"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[dependencies]
# Internal dependencies
altair-core = { path = "../altair-core" }

# Database
surrealdb = { version = "2.4.0", features = ["kv-mem", "kv-surrealkv"] }

# Async runtime
async-trait = "0.1"
tokio = { version = "1.42", features = ["sync", "rt-multi-thread", "full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
tracing = "0.1"

# Utilities
shellexpand = "3.1"
chrono = { version = "0.4", features = ["serde"] }

# Type generation (optional, for tauri-specta integration)
specta = { workspace = true, optional = true, features = ["chrono"] }

[features]
specta = ["dep:specta", "specta/chrono"]

[dev-dependencies]
tempfile = "3.14"
criterion = "0.5"

[[bench]]
name = "migration_bench"
harness = false
