[package]
name = "altair-search"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[dependencies]
# Internal dependencies
altair-core = { path = "../altair-core" }

# ONNX runtime (placeholder for ort or similar)
# ort = "2.0"

# Async runtime traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
tracing = "0.1"

# Linear algebra / vector operations
# ndarray = "0.16"

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
