[package]
name = "altair-storage"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[dependencies]
# Internal dependencies
altair-core = { path = "../altair-core" }

# S3 client (placeholder for aws-sdk-s3 or similar)
# aws-sdk-s3 = "1.0"

# Async runtime traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
