[package]
name = "altair-storage"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.1"

[dependencies]
# Internal dependencies
altair-core = { path = "../altair-core" }

# S3 client
aws-sdk-s3 = "1.90"
aws-config = "1.6"

# Async runtime traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Credential storage
keyring = "3.6"

# Random for password generation
rand = "0.8"

# Image processing
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp"] }

# Observability
tracing = "0.1"

# URL parsing and validation
url = "2.5"

# UUID generation
uuid = { version = "1.16", features = ["v4"] }

# Error handling
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.42", features = ["full", "test-util"] }
reqwest = "0.12"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
